plugins {
    id 'java'
//    id 'application'
    id 'org.springframework.boot' version '2.7.14'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'net.simforge.networkview'
version = '0.0.1'

java {
    sourceCompatibility = '1.8'
}

//application {
//    mainClassName = 'net.simforge.commons.runtime.TaskExecutor'
//}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url 'https://mymavenrepo.com/repo/9k6aQjU4o2RPUv5zfolv/' // simforge repo read url
    }
}

dependencies {
    implementation 'net.simforge:simforge-commons:latest.release'
    implementation 'net.simforge:simforge-commons-ext:latest.release'
    implementation 'net.simforge:simforge-atmosphere:latest.release'
    implementation 'net.simforge:refdata-aircrafts:latest.release'
    implementation 'net.simforge:refdata-airports:latest.release'
    implementation 'net.simforge:network-view-core:latest.release'

    implementation 'postgresql:postgresql:9.1-901-1.jdbc4'
//    implementation 'ch.qos.logback:logback-classic:1.1.7'
//    implementation 'org.ehcache:ehcache:3.3.1'
    implementation 'com.google.guava:guava:21.0'
    implementation 'com.google.code.gson:gson:2.8.6'

    testImplementation 'junit:junit:4.11'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
